--- a/src/components/EditUserPage/EditUserPage.css
+++ b/src/components/EditUserPage/EditUserPage.css
@@ -8,6 +8,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 80px;
 }
 
 .flex-child {
@@ -21,12 +22,22 @@
   padding: 5px;
 }
 
+.flex-child-table {
+  width: 70%;
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.break hr {
+  width: 90%;
+}
+
 .flex-child-active {
   color: #ffffff;
   border-radius: 20px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-  border: 3px solid rgb(2, 84, 2);
-  background-color: rgb(2, 84, 2, 0.8);
+  border: 3px solid rgb(7, 162, 7);
+  background-color: rgba(7, 133, 7, 0.8);
   padding: 100px;
   align-items: flex-start;
 }
@@ -50,4 +61,12 @@
 .break {
   flex-basis: 100%;
   height: 0;
+}
+
+.apply-changes-button {
+  margin-bottom: 10%;
+}
+
+.text-red {
+  color: red;
 }
