Added toastify notifications a few places, added /farms/{farmID} endpoint, now need to work on components on the page

--- a/src/components/EditUserPage/EditUserPage.css
+++ b/src/components/EditUserPage/EditUserPage.css
@@ -86,3 +86,13 @@
 .danger-zone-text {
   margin-bottom: 50px;
 }
+
+.save {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.save:hover {
+  text-decoration: none;
+  color: #ffffff;
+}
