--- a/src/components/FarmsPage/FarmComponent.css
+++ b/src/components/FarmsPage/FarmComponent.css
@@ -45,7 +45,7 @@
   margin: 5px;
   border: 2px solid #0275d8;
   border-radius: 3px;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 1);
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 1);
   padding: 5px;
 }
 
@@ -55,7 +55,7 @@
   flex-basis: 100%;
   flex: 1;
   margin: 5px;
-  border: 2px solid #0275d8;
+  border: 2px solid #ffffff;
   border-radius: 3px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.5);
   padding: 5px;
