--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,9 @@ code {
   overflow: hidden;
   width: 100%;
   background-color: #0275d8;
-  height: 80px;
+  height: 75px;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+  position: relative;
 }
 .topnav ul {
   margin-left: 80px;
@@ -40,7 +41,7 @@ code {
   text-align: center;
   padding: 8px 16px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 27px;
   list-style: none;
 }
 
@@ -76,9 +77,15 @@ code {
   text-decoration: none;
 }
 
+/* .logout { */
+  /* margin-left: 600px; */
+  /* color: #ffffff; */
+/* } */
+
 .logout {
-  margin-left: 600px;
+  position: absolute;
   color: #ffffff;
+  right: 60px;
 }
 
 .user-table {
