--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@ code {
   color: green;
 }
 
+.manage-users {
+  margin-bottom: 50px;
+}
+
 .manage-users span {
   font-size: 20px;
   margin-right: 120px;
@@ -153,15 +157,31 @@ code {
 
 
 .home-page-container {
-  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-top: 30px;
 }
 
 .user-data-home {
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 17px;
 }
 
 .user-data {
   margin-left: 30px;
   font-weight: bold;
+}
+
+
+.form-input-pw-reset {
+  width: 20%;
+}
+
+.pw-reset-submit {
+  margin-bottom: 230px;
+}
+
+.home-page-pw-rst {
+  margin-top: 30px;
 }
