--- a/src/components/FarmsPage/FarmComponent.css
+++ b/src/components/FarmsPage/FarmComponent.css
@@ -79,6 +79,7 @@
   border-radius: 3px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.5);
   justify-content: center;
+  text-align: center;
 }
 
 .farm-heading:hover {
