--- a/src/components/ManageFarmPage/ManageFarmPage.css
+++ b/src/components/ManageFarmPage/ManageFarmPage.css
@@ -37,11 +37,12 @@
   height: 50px;
   align-self: center;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   background-color: #e8e8e8;
   border-radius: 8px;
   padding: 5px;
   padding-top: 15px;
+  font-size: 16px;
 }
 
 .inside-column {
@@ -80,7 +81,7 @@
   padding-top: 3%;
   padding-bottom: 4%;
   align-self: center;
-  margin-bottom: 270px;
+  margin-bottom: 120px;
 }
 
 .live-data-flex {
@@ -100,6 +101,17 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  cursor: pointer;
+  color: black;
+}
+
+.live-data-flex-child:hover {
+  background-color: #cccccc;
+}
+
+
+.link-sensors-page a:hover {
+  text-decoration: none;
 }
 
 .live-data-flex-childs-child {
