--- a/src/components/ManageFarmPage/ManageFarmPage.css
+++ b/src/components/ManageFarmPage/ManageFarmPage.css
@@ -92,11 +92,6 @@
 
 .live-data-flex-child {
   padding: 20px;
-  background-color: white;
-  border: #0275d8 2px solid;
-  border-radius: 3px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 1);
-  /* color: white; */
   font-size: 20px;
   display: flex;
   flex-direction: row;
@@ -135,4 +130,24 @@
   justify-content: space-around;
   border-bottom: #0275d8 3px solid;
   margin-bottom: 20px;
+}
+
+
+.note-p {
+  text-align: center;
+  color: red;
+  font-weight: bold;
+}
+
+.sensor-placeholder {
+  display: flex;
+  background-color: white;
+  border: #0275d8 2px solid;
+  border-radius: 3px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 1);
+  flex-direction: column;
+} 
+
+.send-commands {
+  padding: 20px;
 }
